apps/bookstack/bookstack-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack-db
  namespace: bookstack
spec:
  selector:
    matchLabels:
      app: bookstack-db
  template:
    metadata:
      labels:
        app: bookstack-db
    spec:
      containers:
        - name: bookstack-db
          image: ghcr.io/linuxserver/mariadb:10.6.10
          volumeMounts:
            - name: bookstack-db-mount
              mountPath: /config
          ports:
            - containerPort: 3306
      volumes:
        - name: bookstack-db-mount
          persistentVolumeClaim:
            claimName: bookstack-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: bookstack-db
  namespace: bookstack
spec:
  selector:
    app: bookstack-db
  ports:
    - protocol: TCP
      port: 3306
