apps/bookstack/bookstack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack
  namespace: bookstack
spec:
  selector:
    matchLabels:
      app: bookstack
  template:
    metadata:
      labels:
        app: bookstack
    spec:
      containers:
        - name: bookstack
          image: ghcr.io/linuxserver/bookstack:23.01.20230131
          volumeMounts:
            - name: bookstack-mount
              mountPath: /config
          ports:
            - containerPort: 80
      volumes:
      - name: bookstack-mount
        persistentVolumeClaim:
          claimName: bookstack-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: bookstack
  namespace: bookstack
spec:
  selector:
    app: bookstack
  ports:
    - protocol: TCP
      port: 80
